samples/_failures_safe/1761724233_83e3b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c036d16c.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_c036d16c.c:148: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c036d16c.c:147:5: error: expected declaration or statement at end of input
  147 |     if
      |     ^~
